# cargo-xrun

./: Cargo.toml  mise.toml
.cargo/: config.toml  zigcc  zigcc-win32
client/: Cargo.toml
crates/remote/: Cargo.toml
crates/remote-aarch64-unknown-linux-musl/: Cargo.toml
crates/remote-aarch64-unknown-linux-musl/src/: main.rs
crates/remote-i686-pc-windows-gnullvm/: Cargo.toml
crates/remote-x86_64-unknown-linux-musl/: Cargo.toml
crates/remote-x86_64-unknown-linux-musl/src/: main.rs
crates/remote/src/: lib.rs
examples/: print-envs.rs
remote/: Cargo.toml
remote/src/: main.rs
src/: embedded_binaries.rs  fs_server.rs  lib.rs  main.rs  ssh_master.rs  targets.rs  xrun.rs
src/config/: config_file.rs  mod.rs
src/runner/: config.rs  mod.rs
