[package]
name = "cargo-xrun"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-xrun"
path = "src/xrun.rs"

[[bin]]
name = "cargo-xtest"
path = "src/xtest.rs"

[dependencies]
anyhow = "1.0.100"
cargo-options = "0.7.6"
clap = { version = "4.5.51", features = ["derive", "env", "wrap_help", "unstable-styles"] }
clap-cargo = "0.18.3"
dav-server = "0.8.0"
dirs = "6.0.0"
headers = "0.4.1"
hyper = { version = "1.8.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.18", features = ["tokio"] }
inquire = "0.9"
rand = "0.9.2"
relative-path = "2.0.1"
send_ctrlc = { version = "0.6.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
which = "8.0.0"

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
