[package]
name = "cargo-xrun"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-xrun"
path = "src/main.rs"

[[bin]]
name = "cargo-xtest"
path = "src/main.rs"

[workspace]
members = ["crates/remote", "crates/remote-i686-pc-windows-gnullvm", "crates/remote-x86_64-unknown-linux-musl", "crates/remote-aarch64-unknown-linux-musl"]

[dependencies]
anyhow = "1.0.100"
cargo-options = "0.7.6"
clap = { version = "4.5.51", features = ["derive", "env", "wrap_help", "unstable-styles"] }
clap-cargo = "0.18.3"
dav-server = "0.8.0"
dirs = "6.0.0"
headers = "0.4.1"
hyper = { version = "1.8.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.18", features = ["tokio"] }
inquire = { version = "0.9", default-features = false, features = ["console"] }
rand = "0.9.2"
relative-path = "2.0.1"
send_ctrlc = { version = "0.6.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
which = "8.0.0"
cargo-xrun-remote-i686-pc-windows-gnullvm = { path = "crates/remote-i686-pc-windows-gnullvm", artifact = "bin", target = "i686-pc-windows-gnullvm" }
cargo-xrun-remote-x86_64-unknown-linux-musl = { path = "crates/remote-x86_64-unknown-linux-musl", artifact = "bin", target = "x86_64-unknown-linux-musl" }
cargo-xrun-remote-aarch64-unknown-linux-musl = { path = "crates/remote-aarch64-unknown-linux-musl", artifact = "bin", target = "aarch64-unknown-linux-musl" }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
